IMP: improve-footer-docs

--- a/src/templates/_body_footer.jade
+++ b/src/templates/_body_footer.jade
@@ -41,10 +41,10 @@
               +text-space
 
               a.font-sans-semibold(
-                href="#{PACKAGE.homepage}",
+                href="https://talqui.chat",
                 target="_blank"
               )
-                | Chappe
+                | Talqui
 
               | .
 
